--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "opresource",
-  "version": "1.0.0",
+  "name": "openperpetuum-resource",
+  "version": "1.0.28",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,15 +9,16 @@
   "author": "OpenPerpetuum",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1",
-    "mkdirp": "^1.0.4"
+    "express": "^4.18.2",
+    "mkdirp": "^1.0.4",
+    "zlib": "^1.0.5"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/OpenPerpetuum/OPResource.git"
+    "url": "git+https://github.com/aqpanaciy/openperpetuum-resource.git"
   },
   "bugs": {
-    "url": "https://github.com/OpenPerpetuum/OPResource/issues"
+    "url": "https://github.com/aqpanaciy/openperpetuum-resource/issues"
   },
-  "homepage": "https://github.com/OpenPerpetuum/OPResource#readme"
+  "homepage": "https://github.com/aqpanaciy/openperpetuum-resource#readme"
 }
